--- a/package.json
+++ b/package.json
@@ -5,24 +5,28 @@
   "angular-cli": {},
   "scripts": {
     "start": "ng server",
+    "start-server": "ng build && node ./src/server/index.js",
     "postinstall": "typings install",
     "lint": "tslint \"src/**/*.ts\"",
     "format": "clang-format -i -style=file --glob=src/**/*.ts",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
-  "private": true,
   "dependencies": {
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "^2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
     "es6-shim": "^0.35.0",
+    "hapi": "^13.3.0",
+    "inert": "^3.2.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
+    "twitter": "^1.2.5",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
